// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result /> should match snapshot 1`] = `
<View
  display="flex"
  divided={true}
  flexDirection="row"
  style={
    [
      {
        "borderBottomColor": "#D7D7E0",
        "borderBottomWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "width": "100%",
      },
    ]
  }
>
  <View
    alignItems="center"
    bgColor="rgba(35, 27, 34, 0.25)"
    borderRadius="circle"
    display="flex"
    height={48}
    justifyContent="center"
    overflow="hidden"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(35, 27, 34, 0.25)",
          "borderRadius": 9999,
          "display": "flex",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingBottom": 0.5,
          "paddingLeft": 0.5,
          "paddingRight": 0.5,
          "paddingTop": 0.5,
          "width": 48,
        },
      ]
    }
    width={48}
  >
    <View
      alignItems="center"
      bgColor="elements.selectionAndIcons"
      borderRadius="circle"
      display="flex"
      height="100%"
      justifyContent="center"
      overflow="hidden"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#9898A6",
            "borderRadius": 9999,
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "overflow": "hidden",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGSvgView
        aria-hidden={true}
        bbHeight="50%"
        bbWidth="50%"
        fill="#FFFFFF"
        focusable={false}
        height="50%"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {
                "height": "50%",
                "width": "50%",
              },
            ],
            {
              "opacity": 1,
            },
            {
              "flex": 0,
              "height": "50%",
              "width": "50%",
            },
          ]
        }
        width="50%"
      >
        <RNSVGGroup
          fill={
            [
              0,
              4294967295,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={{}}
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": 24,
          "marginLeft": 16,
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      mb="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 4,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6B78",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
        variant="deep"
      >
        <View
          height="xsmall"
          style={
            [
              {
                "height": 12,
                "width": 12,
              },
            ]
          }
          width="xsmall"
        >
          <RNSVGSvgView
            aria-hidden={true}
            bbHeight={12}
            bbWidth={12}
            fill="#6B6B78"
            focusable={false}
            height={12}
            mt="2px"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "height": 12,
                    "marginTop": 2,
                    "width": 12,
                  },
                ],
                {
                  "opacity": 1,
                },
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            width={12}
          >
            <RNSVGGroup
              fill={
                [
                  0,
                  4285229944,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={{}}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        Attendance 01
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <View
          height="xsmall"
          style={
            [
              {
                "height": 12,
                "width": 12,
              },
            ]
          }
          width="xsmall"
        >
          <RNSVGSvgView
            aria-hidden={true}
            bbHeight={12}
            bbWidth={12}
            fill="#6B6B78"
            focusable={false}
            height={12}
            mt="2px"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "height": 12,
                    "marginTop": 2,
                    "width": 12,
                  },
                ],
                {
                  "opacity": 1,
                },
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            width={12}
          >
            <RNSVGGroup
              fill={
                [
                  0,
                  4285229944,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={{}}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        Attendance 02
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 10,
            },
          ]
        }
      >
        <RNSVGSvgView
          aria-hidden={true}
          bbHeight={12}
          bbWidth={12}
          fill="#6B6B78"
          focusable={false}
          height={12}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              [
                {
                  "height": 12,
                  "width": 12,
                },
              ],
              {
                "opacity": 1,
              },
              {
                "flex": 0,
                "height": 12,
                "width": 12,
              },
            ]
          }
          width={12}
        >
          <RNSVGGroup
            fill={
              [
                0,
                4285229944,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={{}}
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
        </RNSVGSvgView>
        <Text
          size="xsmall"
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": 4,
              },
            ]
          }
          variant="deep"
        >
          5.0
        </Text>
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
        ]
      }
    >
      Jane Doe
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
          },
        ]
      }
      variant="stamina"
    >
      Activity
    </Text>
    <View
      alignItems="center"
      flexDirection="row"
      mt="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#231B22",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "height": 16,
              "lineHeight": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#231B22",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="stamina"
        >
          From 7:30 am to 9:00 pm
        </Text>
      </Text>
    </View>
    <View
      alignItems="center"
      flexDirection="row"
      mt="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#231B22",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "height": 16,
              "lineHeight": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="deep"
        >
          Yoga
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="deep"
        >
          Meditation
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="deep"
        >
          Pilates
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          + 
          2
           activities
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
      </Text>
    </View>
    <RCTScrollView
      horizontal={true}
      showsHorizontalScrollIndicator={false}
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "marginTop": 8,
          },
        ]
      }
    >
      <View>
        <View
          small={true}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#E0DFFF",
                "borderColor": "#E0DFFF",
                "borderRadius": 4,
                "borderWidth": 1,
                "justifyContent": "center",
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "auto",
              },
              {
                "marginRight": 4,
              },
            ]
          }
          variant="informative"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#231B22",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#231B22",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Plan x Product availability
            </Text>
          </View>
        </View>
        <View
          small={true}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#FCD6C3",
                "borderColor": "#FCD6C3",
                "borderRadius": 4,
                "borderWidth": 1,
                "justifyContent": "center",
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "auto",
              },
              {
                "marginRight": 4,
              },
            ]
          }
          variant="attention"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#231B22",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#231B22",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Restriction
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        pressed={false}
        secondary={false}
        style={
          [
            {
              "color": "#D8385E",
              "fontFamily": "Rubik",
              "fontSize": 16,
              "fontWeight": "500",
              "textAlign": "center",
            },
            {
              "marginRight": 32,
              "marginTop": 8,
            },
          ]
        }
      >
        See Details
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Result /> should match snapshot without attendence 1`] = `
<View
  display="flex"
  divided={false}
  flexDirection="row"
  style={
    [
      {
        "display": "flex",
        "flexDirection": "row",
        "width": "100%",
      },
    ]
  }
>
  <View
    alignItems="center"
    bgColor="rgba(35, 27, 34, 0.25)"
    borderRadius="small"
    display="flex"
    height={48}
    justifyContent="center"
    overflow="hidden"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(35, 27, 34, 0.25)",
          "borderRadius": 8,
          "display": "flex",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingBottom": 0.5,
          "paddingLeft": 0.5,
          "paddingRight": 0.5,
          "paddingTop": 0.5,
          "width": 48,
        },
      ]
    }
    width={48}
  >
    <View
      alignItems="center"
      bgColor="elements.selectionAndIcons"
      borderRadius="small"
      display="flex"
      height="100%"
      justifyContent="center"
      overflow="hidden"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#9898A6",
            "borderRadius": 8,
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "overflow": "hidden",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGSvgView
        aria-hidden={true}
        bbHeight="50%"
        bbWidth="50%"
        fill="#FFFFFF"
        focusable={false}
        height="50%"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {
                "height": "50%",
                "width": "50%",
              },
            ],
            {
              "opacity": 1,
            },
            {
              "flex": 0,
              "height": "50%",
              "width": "50%",
            },
          ]
        }
        width="50%"
      >
        <RNSVGGroup
          fill={
            [
              0,
              4294967295,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={{}}
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": 24,
          "marginLeft": 16,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
        ]
      }
    >
      Gym
    </Text>
    <View
      alignItems="center"
      flexDirection="row"
      mt="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#231B22",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "height": 16,
              "lineHeight": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#231B22",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="stamina"
        >
          From 7:30 am to 9:00 pm
        </Text>
      </Text>
    </View>
    <View
      alignItems="center"
      flexDirection="row"
      mt="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#231B22",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "height": 16,
              "lineHeight": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="deep"
        >
          Yoga
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="deep"
        >
          Meditation
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="deep"
        >
          Pilates
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="deep"
        >
          Activity4
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="deep"
        >
          Activity5
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Result /> should match snapshot without limitLabel prop 1`] = `
<View
  display="flex"
  divided={true}
  flexDirection="row"
  style={
    [
      {
        "borderBottomColor": "#D7D7E0",
        "borderBottomWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "width": "100%",
      },
    ]
  }
>
  <View
    alignItems="center"
    bgColor="rgba(35, 27, 34, 0.25)"
    borderRadius="circle"
    display="flex"
    height={48}
    justifyContent="center"
    overflow="hidden"
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(35, 27, 34, 0.25)",
          "borderRadius": 9999,
          "display": "flex",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingBottom": 0.5,
          "paddingLeft": 0.5,
          "paddingRight": 0.5,
          "paddingTop": 0.5,
          "width": 48,
        },
      ]
    }
    width={48}
  >
    <View
      alignItems="center"
      bgColor="elements.selectionAndIcons"
      borderRadius="circle"
      display="flex"
      height="100%"
      justifyContent="center"
      overflow="hidden"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#9898A6",
            "borderRadius": 9999,
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "overflow": "hidden",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGSvgView
        aria-hidden={true}
        bbHeight="50%"
        bbWidth="50%"
        fill="#FFFFFF"
        focusable={false}
        height="50%"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {
                "height": "50%",
                "width": "50%",
              },
            ],
            {
              "opacity": 1,
            },
            {
              "flex": 0,
              "height": "50%",
              "width": "50%",
            },
          ]
        }
        width="50%"
      >
        <RNSVGGroup
          fill={
            [
              0,
              4294967295,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={{}}
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": 24,
          "marginLeft": 16,
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flexDirection="row"
      justifyContent="center"
      mb="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 4,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6B78",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
        variant="deep"
      >
        <View
          height="xsmall"
          style={
            [
              {
                "height": 12,
                "width": 12,
              },
            ]
          }
          width="xsmall"
        >
          <RNSVGSvgView
            aria-hidden={true}
            bbHeight={12}
            bbWidth={12}
            fill="#6B6B78"
            focusable={false}
            height={12}
            mt="2px"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "height": 12,
                    "marginTop": 2,
                    "width": 12,
                  },
                ],
                {
                  "opacity": 1,
                },
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            width={12}
          >
            <RNSVGGroup
              fill={
                [
                  0,
                  4285229944,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={{}}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        Attendance 01
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <View
          height="xsmall"
          style={
            [
              {
                "height": 12,
                "width": 12,
              },
            ]
          }
          width="xsmall"
        >
          <RNSVGSvgView
            aria-hidden={true}
            bbHeight={12}
            bbWidth={12}
            fill="#6B6B78"
            focusable={false}
            height={12}
            mt="2px"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "height": 12,
                    "marginTop": 2,
                    "width": 12,
                  },
                ],
                {
                  "opacity": 1,
                },
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            width={12}
          >
            <RNSVGGroup
              fill={
                [
                  0,
                  4285229944,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={{}}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        Attendance 02
        <View
          height="zero"
          style={
            [
              {
                "height": 0,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 10,
            },
          ]
        }
      >
        <RNSVGSvgView
          aria-hidden={true}
          bbHeight={12}
          bbWidth={12}
          fill="#6B6B78"
          focusable={false}
          height={12}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              [
                {
                  "height": 12,
                  "width": 12,
                },
              ],
              {
                "opacity": 1,
              },
              {
                "flex": 0,
                "height": 12,
                "width": 12,
              },
            ]
          }
          width={12}
        >
          <RNSVGGroup
            fill={
              [
                0,
                4285229944,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={{}}
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
        </RNSVGSvgView>
        <Text
          size="xsmall"
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": 4,
              },
            ]
          }
          variant="deep"
        >
          5.0
        </Text>
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
        ]
      }
    >
      John Doe
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
          },
        ]
      }
      variant="stamina"
    >
      Activity
    </Text>
    <View
      alignItems="center"
      flexDirection="row"
      mt="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#231B22",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "height": 16,
              "lineHeight": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#231B22",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="stamina"
        >
          From 7:30 am to 9:00 pm
        </Text>
      </Text>
    </View>
    <View
      alignItems="center"
      flexDirection="row"
      mt="xxxsmall"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#231B22",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "height": 16,
              "lineHeight": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="deep"
        >
          Yoga
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          •
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
            ]
          }
          variant="deep"
        >
          Meditation
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
                "marginLeft": 4,
                "marginRight": 4,
              },
            ]
          }
          variant="deep"
        >
          + 
          3
        </Text>
        <View
          height="xxxsmall"
          style={
            [
              {
                "height": 4,
                "width": 4,
              },
            ]
          }
          width="xxxsmall"
        />
      </Text>
    </View>
    <RCTScrollView
      horizontal={true}
      showsHorizontalScrollIndicator={false}
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "marginTop": 8,
          },
        ]
      }
    >
      <View>
        <View
          small={true}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#E0DFFF",
                "borderColor": "#E0DFFF",
                "borderRadius": 4,
                "borderWidth": 1,
                "justifyContent": "center",
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "auto",
              },
              {
                "marginRight": 4,
              },
            ]
          }
          variant="informative"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#231B22",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#231B22",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Plan x Product availability
            </Text>
          </View>
        </View>
        <View
          small={true}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#FCD6C3",
                "borderColor": "#FCD6C3",
                "borderRadius": 4,
                "borderWidth": 1,
                "justifyContent": "center",
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "auto",
              },
              {
                "marginRight": 4,
              },
            ]
          }
          variant="attention"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#231B22",
                    "fontFamily": "Rubik",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#231B22",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Restriction
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        disabled={false}
        pressed={false}
        secondary={false}
        style={
          [
            {
              "color": "#D8385E",
              "fontFamily": "Rubik",
              "fontSize": 16,
              "fontWeight": "500",
              "textAlign": "center",
            },
            {
              "marginRight": 32,
              "marginTop": 8,
            },
          ]
        }
      >
        See Details
      </Text>
    </View>
  </View>
</View>
`;
